# AI-MCP-ADX-Adapter

./: .env.example  README.md  adx_mcp_server.py  interactive_claude_mcp.py  prompts.py  pyproject.toml
mcp-server/: adx_server.py  adx_server_quiet.py
